--- a/Week-1/ET5003_traffic_sign.ipynb
+++ b/Week-1/ET5003_traffic_sign.ipynb
@@ -320,7 +320,7 @@
         "id": "g19OkjsMjlIb"
       },
       "source": [
-        "We will use a multinomial logistic regression. We extend the example we saw in the Challenger Disaster to deal with more than two classes.\n",
+        "We will use a multinomial logistic regression.\n",
         "\n",
         "Let us assume we have k classes. Specifically, in multinomial logistic regression, we have a different linear model\n",
         "$$\n",
